<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_color"
        android:title="@string/color">
        <menu>
            <item android:id="@+id/menu_blue"
                android:title="@string/blue"/>
            <item android:id="@+id/menu_red"
                android:title="@string/red"/>
            <item android:id="@+id/menu_green"
                android:title="@string/green"/>
        </menu>
    </item>

    <item android:id="@+id/menu_new"
        android:title="@string/text_new"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_exit"
        android:title="@string/exit"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>